k8s-manifest-files/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: barterbrain-dev
  labels: 
    project: barterbrain
    environment: development
