k8s-manifest-files/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: barterbrain-backend-ingress
  namespace: development

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: "3000"

    alb.ingress.kubernetes.io/backend-protocol: HTTP

    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=120

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: barterbrain-backend-service
                port:
                  number: 3000
